# ebpfn

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pixi.toml  pyproject.toml
benchmarks/: .gitignore  README.md  baselines.py
benchmarks/data/: __init__.py  openml.py
benchmarks/diagnostics/: __init__.py  controllability.py  feature_probe.py  finetune_lift.py  headroom.py  plots.py  reach_vs_snr.py  reachability.py  target_adapter.py
benchmarks/scripts/: pilot_region.py  run_gate1.py  run_gate2.py  run_sweep.py  smoke.py
benchmarks/studies/: __init__.py  apparent_snr_calibration.py  calibrate.py  characterization.py  characterize.py  offline.py  offline_validation.py  pfn.py  pfn_feasibility.py  prior.py  prior_audit.py  study_logging.py  tuning.py  tuning_recovery.py
configs/: characterization.yaml  crps_quadrature_decision.json  eta_0.json  offline_validation.yaml  pfn.yaml  pfn_feasibility_decision.json  pfn_schedule_decision.json  prepare_data.yaml  prior.yaml  source_roles.json  tuning.yaml
configs/characterization_mode/: audit.yaml  fast.yaml
configs/mode/: audit.yaml  fast.yaml
configs/offline_validation_mode/: fast.yaml  pilot.yaml
configs/pfn_mode/: audit.yaml  fast.yaml
configs/prior_mode/: audit.yaml  fast.yaml
configs/tuning_mode/: audit.yaml  fast.yaml  sweep.yaml
ebpfn/: __init__.py  calibration.py  config.py  distance.py  experiment.py  mmd.py  plotting.py  priors.py  regressor.py  results.py
ebpfn/cache/: __init__.py  keys.py  store.py
ebpfn/characterize/: __init__.py  budgets.py  contracts.py  evaluate.py  maps.py  observation.py  ridge.py  targets.py
ebpfn/compare/: __init__.py  blocks.py  contracts.py  directed.py  energy.py
ebpfn/config/: __init__.py  base.py  characterization.py  data.py  offline_validation.py  pfn.py  prior.py  tune.py
ebpfn/data/: __init__.py  hashing.py  preprocessing.py  rotations.py  source_roles.py  splits.py  tasks.py  types.py
ebpfn/gate1/: __init__.py  config.py  corpus.py  coverage.py  dgp.py  downstream.py  gate.py  plotting.py  prior.py
ebpfn/gate2/: __init__.py  ablation.py  config.py  coverage.py  descriptor.py  report.py
ebpfn/pfn/: __init__.py  data.py  distribution.py  feasibility.py  metrics.py  model.py  train.py
ebpfn/priors/: __init__.py  bnn.py  compositional.py  contracts.py  features.py  generate.py  mixture.py  scm.py  shapes.py  targets.py  tree.py  vectorize.py
ebpfn/tune/: __init__.py  contracts.py  evaluate.py  optimizer.py  panels.py  search.py
ebpfn/utils/: __init__.py  provenance.py  random.py
scripts/: README.md  __init__.py  prepare_data.py
scripts/data/: __init__.py  prepare_data.py
scripts/studies/: __init__.py
tests/: test_calibration.py  test_distance.py  test_experiment.py  test_gate1_corpus.py  test_gate1_coverage.py  test_gate1_dgp.py  test_gate1_gate.py  test_gate1_pfn.py  test_gate2_ablation.py  test_gate2_descriptor.py  test_priors.py
tests/architecture/: test_boundaries.py
tests/cache/: test_keys.py  test_store.py
tests/characterize/: test_characterization.py  (+1 more)
(+52 files in other folders)
