[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ebpfn"
version = "0.1.0"
description = "Empirical-Bayes PFN experiments for conditional-structure coverage on tabular regression tasks."
authors = [
    { name = "Silas Koemen", email = "kpsilas@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "catboost>=1.2.10,<2",
    "lightgbm>=4.6.0,<5",
    "matplotlib>=3.11.0,<4",
    "numpy>=2.4.6,<3",
    "openml>=0.15.1,<0.16",
    "pandas>=2.0,<3",
    "polars>=1.41.2,<2",
    "POT>=0.9.6.post1,<0.10",
    "scikit-learn>=1.9.0,<2",
    "scipy>=1.17.1,<2",
    "tabpfn>=8.0.1,<9",
    "torch>=2.1,<2.10",
]

[tool.hatch.build.targets.wheel]
packages = ["ebpfn"]

[tool.hatch.build.targets.sdist]
include = [
    "ebpfn",
    "benchmarks",
    "plans",
    "tests",
    "pyproject.toml",
    "pixi.toml",
    "README.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["ebpfn", "tests", "benchmarks"]
exclude = [
    ".git",
    ".pixi",
    ".pytest_cache",
    ".ruff_cache",
    "__pycache__",
    "benchmarks/results",
    "catboost_info",
    "data",
]

[tool.ruff.lint]
select = [
    "B",
    "C4",
    "E",
    "F",
    "I001",
    "PT",
    "RUF",
    "UP",
    "W",
]
ignore = [
    "E501",
    "PT011",
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.black]
line-length = 120
target-version = ["py311"]
