[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ebpfn"
version = "0.1.0"
description = "Empirical-Bayes prior tuning for tabular regression PFNs."
authors = [
    { name = "Silas Koemen", email = "kpsilas@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=2.4.6,<3",
    "polars>=1.41.2,<2",
    "pydantic>=2.12,<3",
]

[project.optional-dependencies]
bench = [
    "hydra-core>=1.3.2,<2",
    "openml>=0.15.1,<0.16",
    "pandas>=2.0,<3",
]

[tool.hatch.build.targets.wheel]
packages = ["ebpfn"]

[tool.hatch.build.targets.sdist]
include = [
    "ebpfn",
    "benchmarks",
    "configs",
    "plans",
    "scripts",
    "tests",
    "pyproject.toml",
    "pixi.toml",
    "README.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["ebpfn", "tests", "benchmarks", "scripts"]
exclude = [
    ".git",
    ".pixi",
    ".pytest_cache",
    ".ruff_cache",
    "__pycache__",
    "benchmarks/results",
    "catboost_info",
    "data",
]

[tool.ruff.lint]
select = [
    "B",
    "C4",
    "E",
    "F",
    "I001",
    "PT",
    "RUF",
    "UP",
    "W",
]
ignore = [
    "E501",
    "PT011",
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.black]
line-length = 120
target-version = ["py311"]
